--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.5",
+    "@reduxjs/toolkit": "^1.9.1",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-date-picker": "^4.2.6",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
