--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-feature android:name="android.hardware.camera.front" android:required="false" />
     <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
 
     <application
       android:name=".MainApplication"
@@ -18,25 +21,30 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme">
 
+      <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="AIzaSyDFbc0EvDfyY8k1ro1phUeISIHqoiNMWiI"/>
+
      
       <activity
       android:name=".SplashActivity"
       android:theme="@style/SplashTheme"
-      android:label="@string/app_name"
-      android:exported="true">
+      android:label="@string/app_name"/>
+      
+      <activity
+        android:name=".MainActivity"
+        android:label="@string/app_name"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+        android:launchMode="singleTask"
+        android:windowSoftInputMode="adjustResize"
+        android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
 
-       <activity
-        android:name=".MainActivity"
-        android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-        android:launchMode="singleTask"
-        android:windowSoftInputMode="adjustResize"
-        android:exported="true"/>
+    
 
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
