--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,11 +20,13 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        // implementation project(':react-native-maps')
         classpath("com.android.tools.build:gradle:7.2.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
+        classpath("com.google.gms:google-services:4.3.14")
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // in the individual module build.gradle files  
     }
 }
 
