--- a/package.json
+++ b/package.json
@@ -11,24 +11,38 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.0.4",
+    "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/auth": "^16.4.6",
+    "@react-native-firebase/database": "^16.4.6",
     "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/drawer": "^6.5.3",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.5",
     "@reduxjs/toolkit": "^1.9.1",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-android-location-enabler": "^1.2.2",
+    "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^4.2.6",
+    "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "^1.3.2",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-permissions": "^3.6.1",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -38,6 +52,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
