--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -257,8 +257,12 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
+
+    // for firebase phone auth
+    implementation platform('com.google.firebase:firebase-bom:26.3.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'androidx.browser:browser:1.3.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
