--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
     "@react-native-firebase/database": "^16.4.6",
+    "@react-native-firebase/firestore": "^16.5.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/drawer": "^6.5.3",
     "@react-navigation/native": "^6.0.14",
