--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-community/geolocation": "^3.0.4",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
@@ -23,6 +24,7 @@
     "@react-navigation/stack": "^6.3.5",
     "@reduxjs/toolkit": "^1.9.1",
     "deprecated-react-native-prop-types": "^2.3.0",
+    "lodash.clonedeep": "^4.5.0",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
     "patch-package": "^6.5.0",
@@ -39,7 +41,7 @@
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.3.2",
-    "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-permissions": "^3.6.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.13.0",
@@ -59,6 +61,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
     "@types/react-native-snap-carousel": "^3.8.5",
